[package]
name = "nom-json"
version = "0.1.0"
authors = ["ChristopherBiscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nom_json"
path = "src/lib.rs"

[dependencies]
nom = "6.1.2"
